# quantum-launcher

./: .gitignore  CHANGELOGS.md  CONTRIBUTING.md  Cargo.toml  README.md  a.out  clippy_pedantic.sh  compile.sh  flathub-sources.json  io.github.Mrmayman.QuantumLauncher.yml  io.github.Mrmayman.quantumlauncher.yml  main.cpp  quantum_launcher.spec  wincompile.sh
.cargo/: config.toml
assets/: ClientInstaller.java  Hook.java  README.md
changelogs/: 0.1.md  0.2.md  0.3.1.md  (+4 more)
crates/ql_core/: Cargo.toml
crates/ql_core/src/: error.rs  file_utils.rs  java_install.rs  lib.rs  loader.rs  print.rs  progress.rs
crates/ql_core/src/jarmod/: json.rs  mod.rs  zip_dir.rs
crates/ql_core/src/json/: asset_index.rs  fabric.rs  forge.rs  instance_config.rs  java_files.rs  java_list.rs  manifest.rs  mod.rs  optifine.rs  version.rs
crates/ql_instances/: Cargo.toml
crates/ql_instances/src/: json_natives.rs  json_profiles.rs  launcher_update_detector.rs  lib.rs
crates/ql_instances/src/auth/: mod.rs  ms.rs
crates/ql_instances/src/auth/elyby/: authlib.rs  error.rs  mod.rs
crates/ql_instances/src/download/: constants.rs  library_downloader.rs  mod.rs
crates/ql_instances/src/import_export/: export.rs  import.rs  mod.rs  quantum-config.json.example
crates/ql_instances/src/instance/: create.rs  jarmod.rs  list_versions.rs  migrate.rs  mod.rs  read_log.rs
crates/ql_instances/src/instance/launch/: error.rs  launcher.rs  mod.rs
crates/ql_instances/src/json_structs/: mod.rs
crates/ql_instances/src/mc_auth/: mod.rs
crates/ql_java_handler/: Cargo.toml
crates/ql_java_handler/src/: compression.rs  corretto.rs  java_files.rs  java_list.rs  lib.rs  third_party.rs
crates/ql_mod_manager/: Cargo.toml
crates/ql_mod_manager/src/: lib.rs  rate_limiter.rs
crates/ql_mod_manager/src/instance_mod_installer/: fabric.rs  mod.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/instance_mod_installer/fabric/: error.rs  make_launch_jar.rs  mod.rs  uninstall.rs  version_compare.rs
crates/ql_mod_manager/src/instance_mod_installer/forge/: mod.rs  server.rs  uninstall.rs
crates/ql_mod_manager/src/loaders/: mod.rs  neoforge.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/loaders/fabric/: error.rs  make_launch_jar.rs  mod.rs  uninstall.rs
crates/ql_mod_manager/src/loaders/forge/: error.rs  mod.rs  server.rs  uninstall.rs
crates/ql_mod_manager/src/mod_manager/: delete.rs  download.rs  error.rs  get_project.rs  image.rs  local_json.rs  mod.rs  recommended.rs  search.rs  toggle.rs  update.rs  versions.rs
crates/ql_mod_manager/src/mod_manager/curseforge/: download.rs  mod.rs
crates/ql_mod_manager/src/mod_manager/modrinth/: download.rs  info.rs  mod.rs  search.rs  versions.rs
crates/ql_mod_manager/src/old/: mod.rs
crates/ql_mod_manager/src/old/modrinth/: download.rs  mod.rs  search.rs
crates/ql_mod_manager/src/presets/: json.rs  mod.rs
crates/ql_mod_manager/src/store/: add_file.rs  delete.rs  error.rs  image.rs  local_json.rs  mod.rs  recommended.rs  toggle.rs  update.rs
crates/ql_mod_manager/src/store/curseforge/: categories.rs  download.rs  mod.rs
crates/ql_mod_manager/src/store/modpack/: curseforge.rs  error.rs  mod.rs  modrinth.rs
crates/ql_mod_manager/src/store/modrinth/: download.rs  info.rs  mod.rs  search.rs  versions.rs
crates/ql_packager/: Cargo.toml
crates/ql_packager/src/: example.json  export.rs  import.rs  lib.rs  multimc.rs
crates/ql_plugins/: Cargo.toml
crates/ql_plugins/src/: error.rs  json.rs  lib.rs  passed_types.rs  plugin.rs  resolve.rs
crates/ql_reqwest/: Cargo.toml
crates/ql_reqwest/src/: lib.rs
crates/ql_servers/: Cargo.toml
crates/ql_servers/src/: create.rs  lib.rs  list_versions.rs  read_log.rs  run.rs  server_properties.rs  ssh.rs
crates/ql_servers/src/loaders/: mod.rs
ql_instances/: Cargo.toml
ql_instances/src/: error.rs  file_utils.rs  java_install.rs  launcher_update_detector.rs  lib.rs  locks.rs  print.rs
ql_instances/src/download/: constants.rs  library_downloader.rs  mod.rs
ql_instances/src/instance/: create.rs  instance_create.rs  instance_launch.rs  instance_list_versions.rs  instance_read_logs.rs  launch.rs  list_versions.rs  migrate.rs  mod.rs  read_log.rs
ql_instances/src/instance/instance_mod_installer/: fabric.rs  forge.rs
ql_instances/src/instance/launch/: error.rs  mod.rs
ql_instances/src/json_structs/: json_forge.rs  json_instance_config.rs  json_java_list.rs  json_manifest.rs  json_optifine.rs  json_version.rs  mod.rs
ql_mod_manager/: Cargo.toml
ql_mod_manager/src/: lib.rs
ql_mod_manager/src/instance_mod_installer/: fabric.rs  forge.rs  forge_json.rs  mod.rs  optifine.rs
ql_mod_manager/src/instance_mod_installer/forge/: error.rs  mod.rs  uninstall.rs
ql_mod_manager/src/mod_manager/: delete.rs  download.rs  get_project.rs  local_json.rs  mod.rs  search.rs  toggle.rs  update.rs  versions.rs
ql_mod_manager/src/modrinth/: get_project.rs  json_search.rs  local_json.rs  mod.rs  mod_download.rs  search.rs  versions.rs
quantum_launcher/: Cargo.toml  build.rs
quantum_launcher/src/: arguments.rs  cli.rs  config.rs  icon_manager.rs  l10n.rs  launcher_state.rs  main.rs  menu_renderer.rs  message_handler.rs  message_update.rs  mods_store.rs  state.rs  tick.rs  update.rs  view.rs
quantum_launcher/src/menu_renderer/: changelog.rs  dynamic_box.rs  edit_instance.rs  html.rs  launch.rs  log.rs  login.rs  mod.rs  mods_manage.rs  mods_store.rs  presets.rs  server_manager.rs  settings.rs
quantum_launcher/src/menu_renderer/mods/: install_loader.rs  instance_package.rs  jarmods.rs  mod.rs  mods_manage.rs  presets.rs
quantum_launcher/src/menu_renderer/mods/mods_store/: html.rs  markdown.rs  mod.rs
quantum_launcher/src/menu_renderer/mods_store/: helpers.rs  html.rs  markdown.rs  mod.rs
quantum_launcher/src/message_handler/: iced_event.rs  mod.rs
quantum_launcher/src/message_update/: accounts.rs  create_instance.rs  edit_instance.rs  manage_mods.rs  mod.rs  presets.rs
quantum_launcher/src/state/: menu.rs  message.rs  mod.rs
quantum_launcher/src/stylesheet/: color.rs  mod.rs  styles.rs  widgets.rs
(+100 files in other folders)
