[workspace]
members = [
    "quantum_launcher",
    "crates/ql_instances",
    "crates/ql_mod_manager",
    "crates/ql_core",
    "crates/omniarchive_api",
    "crates/ql_servers",
    "crates/ql_plugins",
]
resolver = "2"

[workspace.dependencies]
colored = "2"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process"] }
lazy_static = "1"
chrono = "0.4"
zip-extract = "0.2"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release-ql]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = "symbols"
