[workspace]
members = [
    "quantum_launcher",
    "crates/ql_instances",
    "crates/ql_mod_manager",
    "crates/ql_core",
    "crates/omniarchive_api",
    "crates/ql_servers",
    "crates/ql_java_handler",
]
resolver = "2"

[workspace.dependencies]
colored = "3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process"] }
chrono = "0.4"
zip-extract = { version = "0.2", default-features = false, features = [
    "deflate",
] }
thiserror = "2"
rfd = { version = "0.15", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }

image = { version = "0.24", default-features = false, features = [
    # Web formats are enough
    #"avif", 
    "gif",
    "ico",
    "jpeg",
    "png",
    "webp",
] }
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release-dbg]
inherits = "release"
debug = true

[profile.release-ql]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = "symbols"
panic = "abort"
