[package]
name = "ql_instances"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "*"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "1"
tokio = { version = "1", features = ["process", "macros"] }
tempfile = "3"
zip-extract = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.6.0"
colored = "2.1.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
# tokio-stream = { version = "0.1", features = ["io-util"] }
