[package]
name = "ql_instances"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ql_core = { path = "../ql_core" }
omniarchive_api = { path = "../omniarchive_api" }

reqwest = { version = "0.12" }
semver = "1"
zip-extract = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.6"

colored = "2"
indicatif = "0.17"

tokio = { version = "1", features = ["macros", "process"] }
strsim = "0.11"
