[package]
name = "ql_mod_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ql_instances = { path = "../ql_instances" }

reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip-extract = "0.2"
colored = "2"
image = "0.25"
async-recursion = "1.1.1"
tokio = { version = "1", features = ["fs"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
