[package]
name = "quantum_launcher"
version = "0.4.1"
edition = "2021"

authors = ["Mrmayman <navneetkrishna22@gmail.com>"]
description = "A simple Minecraft Launcher written in Rust."
keywords = ["minecraft", "mc", "launcher"]
license = "GPL-3.0-only"
repository = "https://github.com/Mrmayman/quantum-launcher/"
readme = "../README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "3"

[dependencies]
ql_instances = { path = "../crates/ql_instances" }
ql_mod_manager = { path = "../crates/ql_mod_manager" }
ql_core = { path = "../crates/ql_core" }
ql_servers = { path = "../crates/ql_servers" }

# For the GUI
iced = { version = "0.13", features = ["tokio", "image", "svg"] }

# For parsing JSON
serde = { workspace = true }
serde_json = { workspace = true }

# For managing async tasks
tokio = { workspace = true }
# For managing the logging time/date
chrono = { workspace = true }
# For the icon widget macro
paste = "1"
# For the file picker
rfd = { workspace = true }

# Terminal
terminal_size = "0.4"
colored = { workspace = true }
clap = { version = "4", features = ["help"] }

comrak = "0.38" # For markdown parsing (displaying mod pages)
image = "0.24"
# We be implementing a full blown HTML renderer in iced with this one
html5ever = "0.27"
markup5ever_rcdom = "0.3"
# Look, I could just have used the
# built in markdown widget in iced,
# but it doesn't have inline HTML support

# Shenanigans to get Reqwest building everywhere
# this is probably not a good idea but whatever.
[target.'cfg(all(target_os = "linux", any(target_env = "musl", not(target_arch = "x86_64"))))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console"] }
