[package]
name = "quantum_launcher"
version = "0.4.1"
edition = "2021"

authors = ["Mrmayman <navneetkrishna22@gmail.com>"]
description = "A simple Minecraft Launcher written in Rust."
keywords = ["minecraft", "mc", "launcher"]
license = "GPL-3.0-only"
homepage = "https://mrmayman.github.io/quantumlauncher"
repository = "https://github.com/Mrmayman/quantum-launcher/"
readme = "../README.md"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "3"

[dependencies]
ql_instances = { path = "../crates/ql_instances" }
ql_mod_manager = { path = "../crates/ql_mod_manager" }
ql_core = { path = "../crates/ql_core" }
ql_servers = { path = "../crates/ql_servers" }

# For the GUI
iced = { version = "0.13", features = ["tokio", "image", "svg"] }

# For parsing JSON
serde = { workspace = true }
serde_json = { workspace = true }

# For managing async tasks
tokio = { workspace = true }
# For managing the logging time/date
chrono = { workspace = true }
# For the icon widget macro
paste = "1"
# For the file picker
rfd = { workspace = true }

# Terminal
terminal_size = "0.4"
colored = { workspace = true }
clap = { version = "4", features = ["help"] }

# Mod page rendering:
comrak = { version = "0.38", default-features = false } # Markdown rendering
image = "0.24"                                          # Image loading
html5ever = { workspace = true }                        # HTML rendering
markup5ever_rcdom = { workspace = true }                #

# iced::widget::markdown doesn't have inline
# HTML support so I made my own renderer.

# Shenanigans to get Reqwest building everywhere
# this is probably not a good idea but whatever.
[target.'cfg(all(target_os = "linux", any(target_env = "musl", not(target_arch = "x86_64"))))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console"] }
