[package]
name = "ql_core"
version = "0.4.1"
edition = "2021"

[dependencies]
chrono = { workspace = true }
dirs = "6"
futures = { workspace = true }
zip-extract = { workspace = true }
zip = { workspace = true }
walkdir = "2"

colored = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

# For finding the closest official version to
# an Omniarchive version.
strsim = "0.11"
