[package]
name = "ql_core"
version = "0.0.0"
edition = "2021"

[dependencies]
ql_reqwest = { path = "../ql_reqwest" }

chrono = { workspace = true }
dirs = "6"
futures = { version = "0.3", default-features = false }
zip-extract = { workspace = true }
zip = { workspace = true }
walkdir = "2"

colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

tokio-util = "0.7"
