[package]
name = "ql_instances"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ql_core = { path = "../ql_core" }
omniarchive_api = { path = "../omniarchive_api" }

chrono = { workspace = true }
semver = "1"
zip-extract = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = "0.6"

colored = { workspace = true }
indicatif = "0.17"
thiserror = { workspace = true }
