[package]
name = "ql_instances"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ql_core = { path = "../ql_core" }
omniarchive_api = { path = "../omniarchive_api" }
ql_java_handler = { path = "../ql_java_handler" }

chrono = { workspace = true }
semver = "1"
zip-extract = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = "0.7"

colored = { workspace = true }
indicatif = "0.17"
thiserror = { workspace = true }

# Removing unicode characters from XML log
any_ascii = "0.3"

keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "vendored",
] }
