[package]
name = "ql_mod_manager"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ql_core = { path = "../ql_core" }
ql_java_handler = { path = "../ql_java_handler" }
ql_reqwest = { path = "../ql_reqwest" }

serde = { workspace = true }
serde_json = { workspace = true }

zip-extract = { workspace = true }
zip = { workspace = true }

colored = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

image = { workspace = true }
chrono = { workspace = true }
regex = "1"
