[package]
name = "ql_plugins"
version = "0.4.0"
edition = "2021"

[dependencies]
ql_core = { path = "../ql_core" }
ql_java_handler = { path = "../ql_java_handler" }

colored = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rfd = { workspace = true }
lazy_static = { workspace = true }

include_dir = "0.7"
mlua = { version = "0.10", features = ["vendored", "lua51"] }
