[package]
name = "ql_servers"
version = "0.4.0"
edition = "2021"

[dependencies]
ql_core = { path = "../ql_core" }
omniarchive_api = { path = "../omniarchive_api" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
zip-extract = { workspace = true }
thiserror = { workspace = true }
