[package]
name = "ql_servers"
version = "0.0.0"
edition = "2021"

[dependencies]
ql_core = { path = "../ql_core" }
ql_java_handler = { path = "../ql_java_handler" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
zip-extract = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
